[gd_scene load_steps=46 format=2]

[ext_resource path="res://src/Texturas/Player/animacao_correndo.png" type="Texture" id=1]
[ext_resource path="res://src/scripts/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://src/Animacoes/Player/Playerdano.tres" type="Animation" id=3]
[ext_resource path="res://src/Texturas/Player/animacao_pulando.png" type="Texture" id=4]
[ext_resource path="res://src/Texturas/Player/animacao_caindo.png" type="Texture" id=5]
[ext_resource path="res://src/Texturas/Player/animacao_parado.png" type="Texture" id=6]
[ext_resource path="res://src/Animacoes/Player/Playerdash.tres" type="Animation" id=7]
[ext_resource path="res://src/Animacoes/Player/Playermordendo.tres" type="Animation" id=8]
[ext_resource path="res://src/Texturas/Player/animacao_morrendo.png" type="Texture" id=9]
[ext_resource path="res://src/Som/SFX/Heroi/sfx_heroi_derrota.wav" type="AudioStream" id=10]
[ext_resource path="res://src/scripts/Player/animacao_player.gd" type="Script" id=11]
[ext_resource path="res://src/Animacoes/Player/maquina_estados_player.tres" type="AnimationNodeStateMachine" id=12]
[ext_resource path="res://src/Animacoes/Player/Playeruivando.tres" type="Animation" id=13]
[ext_resource path="res://src/Shaders/flash_branco.gdshader" type="Shader" id=14]
[ext_resource path="res://src/Texturas/Cenario/Efeitos/circulo_gradiente.png" type="Texture" id=15]
[ext_resource path="res://src/Som/SFX/Heroi/sfx_heroi_uivo.wav" type="AudioStream" id=16]
[ext_resource path="res://src/Som/SFX/Heroi/sfx_heroi_acertado.wav" type="AudioStream" id=17]
[ext_resource path="res://src/Som/SFX/Heroi/sfx_heroi_mordidawav.wav" type="AudioStream" id=18]
[ext_resource path="res://src/Som/SFX/Heroi/sfx_heroi_pulo.wav" type="AudioStream" id=19]
[ext_resource path="res://src/Som/SFX/Outros/sfx_item_vida.wav" type="AudioStream" id=20]
[ext_resource path="res://src/Som/SFX/Heroi/sfx_heroi_queda.wav" type="AudioStream" id=21]
[ext_resource path="res://src/Fonts/Cinzel/cinzel.regular.ttf" type="DynamicFontData" id=22]
[ext_resource path="res://src/Texturas/UI/SimpleFlatKeys/Light/E-Key.png" type="Texture" id=23]
[ext_resource path="res://src/Texturas/UI/SimpleFlatKeys/Light/D-Key.png" type="Texture" id=24]
[ext_resource path="res://src/Texturas/UI/SimpleFlatKeys/Light/Q-Key.png" type="Texture" id=25]
[ext_resource path="res://src/Texturas/Cenario/Efeitos/circulo.png" type="Texture" id=26]
[ext_resource path="res://src/Texturas/UI/SimpleFlatKeys/Light/Space-Key.png" type="Texture" id=27]
[ext_resource path="res://src/Texturas/UI/SimpleFlatKeys/Light/Shift-Key.png" type="Texture" id=28]
[ext_resource path="res://src/Texturas/UI/SimpleFlatKeys/Light/A-Key.png" type="Texture" id=29]
[ext_resource path="res://src/Texturas/UI/SimpleFlatKeys/Light/W-Key.png" type="Texture" id=30]
[ext_resource path="res://src/scripts/Menus/ui_comandos.gd" type="Script" id=32]

[sub_resource type="ShaderMaterial" id=38]
shader = ExtResource( 14 )
shader_param/flash = false
shader_param/flash_strength = 1.0

[sub_resource type="RectangleShape2D" id=36]
extents = Vector2( 169, 368.5 )

[sub_resource type="Animation" id=39]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Uivo/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 1, 0.505882, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "caindo"
length = 0.375
loop = true
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.0833333, 0.125, 0.166667, 0.208333, 0.25, 0.291667, 0.333333 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 3, 4, 6, 7, 2, 5, 8 ]
}

[sub_resource type="Animation" id=6]
resource_name = "correndo"
length = 0.708333
loop = true
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.0833333, 0.125, 0.166667, 0.208333, 0.25, 0.291667, 0.333333, 0.375, 0.416667, 0.458333, 0.5, 0.541667, 0.583333, 0.625, 0.666667 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 4, 5, 6, 8, 9, 10, 12, 13, 14, 3, 7, 11, 15, 16 ]
}

[sub_resource type="Animation" id=9]
resource_name = "morrendo"
length = 1.29167
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 9 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 7 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.0833333, 0.125, 0.166667, 0.208333, 0.25, 0.291667, 0.333333, 0.375, 0.416667, 0.458333, 0.5, 0.541667, 0.583333, 0.625, 0.666667, 0.708333, 0.75, 0.791667, 0.833333, 0.875, 0.916667, 0.958333, 1, 1.04167, 1.08333, 1.125, 1.16667, 1.20833, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 5, 6, 7, 8, 10, 11, 12, 13, 15, 16, 17, 18, 20, 21, 22, 23, 25, 26, 27, 28, 4, 9, 14, 19, 24, 29, 30 ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("Sons/Derrota")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=10]
resource_name = "parado"
length = 0.875
loop = true
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.0833333, 0.125, 0.166667, 0.208333, 0.25, 0.291667, 0.333333, 0.375, 0.416667, 0.458333, 0.5, 0.541667, 0.583333, 0.625, 0.666667, 0.708333, 0.75, 0.791667, 0.833333 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 4, 5, 6, 8, 9, 10, 12, 13, 14, 16, 17, 18, 3, 7, 11, 15, 19, 20 ]
}

[sub_resource type="Animation" id=11]
resource_name = "pulando"
length = 0.375
loop = true
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.0833333, 0.125, 0.166667, 0.208333, 0.25, 0.291667, 0.333333 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 3, 4, 6, 7, 2, 5, 8 ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("Sons/Pulo")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sons/Pulo:pitch_scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="AnimationNodeStateMachinePlayback" id=35]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 331, 468 )

[sub_resource type="CircleShape2D" id=40]
radius = 1024.0

[sub_resource type="DynamicFont" id=41]
size = 20
font_data = ExtResource( 22 )

[sub_resource type="DynamicFont" id=42]
size = 30
use_mipmaps = true
use_filter = true
font_data = ExtResource( 22 )

[sub_resource type="DynamicFont" id=43]
size = 20
use_mipmaps = true
use_filter = true
font_data = ExtResource( 22 )

[node name="Player" type="Node2D"]

[node name="Player" type="KinematicBody2D" parent="." groups=["player"]]
collision_layer = 49
collision_mask = 49
script = ExtResource( 2 )
gravidade = 45
forca_pulo = 850
force_dash = 10000

[node name="Sprite" type="Sprite" parent="Player"]
material = SubResource( 38 )
position = Vector2( -85, 0 )
texture = ExtResource( 6 )
hframes = 4
vframes = 6
frame = 17
region_rect = Rect2( 92, 2, 21, 33 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 0, 79.5 )
shape = SubResource( 36 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]
anims/RESET = SubResource( 39 )
anims/caindo = SubResource( 5 )
anims/correndo = SubResource( 6 )
anims/dano = ExtResource( 3 )
anims/dash = ExtResource( 7 )
anims/mordendo = ExtResource( 8 )
anims/morrendo = SubResource( 9 )
anims/parado = SubResource( 10 )
anims/pulando = SubResource( 11 )
anims/uivando = ExtResource( 13 )

[node name="AnimationTree" type="AnimationTree" parent="Player"]
tree_root = ExtResource( 12 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 35 )
parameters/conditions/dash = false
parameters/conditions/esta_mordendo = false
parameters/conditions/esta_morto = false
parameters/conditions/esta_movimentando = false
parameters/conditions/esta_uivando = false
parameters/conditions/levou_dano = false
parameters/dash/TimeScale/scale = 2.0
parameters/movimentacao/blend_position = Vector2( -0.000794291, 0 )

[node name="ControladorAnimacao" type="Node2D" parent="Player"]
script = ExtResource( 11 )

[node name="Mordida" type="Area2D" parent="Player"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Mordida"]
position = Vector2( 485, -20 )
shape = SubResource( 2 )

[node name="Uivo" type="Area2D" parent="Player"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Uivo"]
scale = Vector2( 3.5, 3 )
shape = SubResource( 40 )

[node name="Sprite" type="Sprite" parent="Player/Uivo"]
modulate = Color( 0, 1, 0.505882, 0 )
light_mask = 0
scale = Vector2( 7.2, 6.2 )
z_index = 30
texture = ExtResource( 15 )

[node name="Position2D" type="Position2D" parent="Player"]
position = Vector2( 256, 16 )

[node name="Sons" type="Node" parent="Player"]

[node name="Acertado" type="AudioStreamPlayer" parent="Player/Sons"]
stream = ExtResource( 17 )
bus = "Efeitos"

[node name="Uivo" type="AudioStreamPlayer" parent="Player/Sons"]
stream = ExtResource( 16 )
bus = "Efeitos"

[node name="Mordida" type="AudioStreamPlayer" parent="Player/Sons"]
stream = ExtResource( 18 )
volume_db = -2.0
bus = "Efeitos"

[node name="Pulo" type="AudioStreamPlayer" parent="Player/Sons"]
stream = ExtResource( 19 )
bus = "Efeitos"

[node name="Vida" type="AudioStreamPlayer" parent="Player/Sons"]
stream = ExtResource( 20 )
bus = "Efeitos"

[node name="Derrota" type="AudioStreamPlayer" parent="Player/Sons"]
stream = ExtResource( 10 )
pitch_scale = 0.95
bus = "Efeitos"

[node name="Queda" type="AudioStreamPlayer" parent="Player/Sons"]
stream = ExtResource( 21 )
pitch_scale = 0.8
bus = "Efeitos"

[node name="UivoCooldown" type="Timer" parent="Player"]
wait_time = 3.0
one_shot = true

[node name="BolaFogoCooldown" type="Timer" parent="Player"]
wait_time = 2.0
one_shot = true

[node name="DashCooldown" type="Timer" parent="Player"]
one_shot = true

[node name="Tayrin" type="Position2D" parent="Player"]
position = Vector2( -533, -416 )
scale = Vector2( 0.1, 0.1 )

[node name="Instancias" type="Node" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="InformaçõesVisuais" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -405, 265 )
script = ExtResource( 32 )

[node name="InfoMovimentação" type="Control" parent="CanvasLayer/InformaçõesVisuais"]
modulate = Color( 1, 1, 1, 0.392157 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="A" type="Sprite" parent="CanvasLayer/InformaçõesVisuais/InfoMovimentação"]
position = Vector2( 48, 568 )
scale = Vector2( 0.04, 0.04 )
texture = ExtResource( 29 )

[node name="D" type="Sprite" parent="CanvasLayer/InformaçõesVisuais/InfoMovimentação"]
position = Vector2( 80, 568 )
scale = Vector2( 0.04, 0.04 )
texture = ExtResource( 24 )

[node name="Info" type="Label" parent="CanvasLayer/InformaçõesVisuais/InfoMovimentação"]
margin_left = 29.0
margin_top = 519.0
margin_right = 100.0
margin_bottom = 547.0
custom_fonts/font = SubResource( 41 )
text = "Andar"
align = 1
valign = 1

[node name="InfoDash" type="Control" parent="CanvasLayer/InformaçõesVisuais"]
modulate = Color( 1, 1, 1, 0.392157 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Shift" type="Sprite" parent="CanvasLayer/InformaçõesVisuais/InfoDash"]
position = Vector2( 64, 480 )
scale = Vector2( 0.04, 0.04 )
texture = ExtResource( 28 )

[node name="Info" type="Label" parent="CanvasLayer/InformaçõesVisuais/InfoDash"]
margin_left = 28.0
margin_top = 432.0
margin_right = 99.0
margin_bottom = 460.0
custom_fonts/font = SubResource( 41 )
text = "Dash"
align = 1
valign = 1

[node name="InfoPulo" type="Control" parent="CanvasLayer/InformaçõesVisuais"]
modulate = Color( 1, 1, 1, 0.392157 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Espaco" type="Sprite" parent="CanvasLayer/InformaçõesVisuais/InfoPulo"]
position = Vector2( 176, 568 )
scale = Vector2( 0.04, 0.04 )
texture = ExtResource( 27 )

[node name="Info" type="Label" parent="CanvasLayer/InformaçõesVisuais/InfoPulo"]
margin_left = 141.0
margin_top = 504.0
margin_right = 212.0
margin_bottom = 563.0
custom_fonts/font = SubResource( 41 )
text = "Pular"
align = 1
valign = 1

[node name="InfoUivo" type="Control" parent="CanvasLayer/InformaçõesVisuais"]
modulate = Color( 1, 1, 1, 0.392157 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="E" type="Sprite" parent="CanvasLayer/InformaçõesVisuais/InfoUivo"]
position = Vector2( 851, 568 )
scale = Vector2( 0.04, 0.04 )
texture = ExtResource( 23 )

[node name="Info" type="Label" parent="CanvasLayer/InformaçõesVisuais/InfoUivo"]
margin_left = 816.0
margin_top = 520.0
margin_right = 887.0
margin_bottom = 548.0
custom_fonts/font = SubResource( 41 )
text = "Uivar"
align = 1
valign = 1

[node name="InfoMordida" type="Control" parent="CanvasLayer/InformaçõesVisuais"]
modulate = Color( 1, 1, 1, 0.392157 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="W" type="Sprite" parent="CanvasLayer/InformaçõesVisuais/InfoMordida"]
position = Vector2( 957, 568 )
scale = Vector2( 0.04, 0.04 )
texture = ExtResource( 30 )

[node name="Info" type="Label" parent="CanvasLayer/InformaçõesVisuais/InfoMordida"]
margin_left = 912.0
margin_top = 520.0
margin_right = 998.0
margin_bottom = 548.0
custom_fonts/font = SubResource( 41 )
text = "Morder"
align = 1
valign = 1

[node name="InfoBolaFogo" type="Control" parent="CanvasLayer/InformaçõesVisuais"]
modulate = Color( 1, 1, 1, 0.392157 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Q" type="Sprite" parent="CanvasLayer/InformaçõesVisuais/InfoBolaFogo"]
position = Vector2( 957, 480 )
scale = Vector2( 0.04, 0.04 )
texture = ExtResource( 25 )

[node name="Info" type="Label" parent="CanvasLayer/InformaçõesVisuais/InfoBolaFogo"]
margin_left = 913.0
margin_top = 432.0
margin_right = 999.0
margin_bottom = 460.0
custom_fonts/font = SubResource( 41 )
text = "Fogo"
align = 1
valign = 1

[node name="CooldownBolaFogo" type="Control" parent="CanvasLayer/InformaçõesVisuais"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Fundo" type="Sprite" parent="CanvasLayer/InformaçõesVisuais/CooldownBolaFogo"]
modulate = Color( 0.160784, 0.215686, 0.541176, 1 )
position = Vector2( 956.4, 462.4 )
scale = Vector2( 0.075, 0.075 )
texture = ExtResource( 26 )

[node name="Label" type="Label" parent="CanvasLayer/InformaçõesVisuais/CooldownBolaFogo"]
margin_left = 926.4
margin_top = 442.4
margin_right = 986.4
margin_bottom = 484.4
custom_fonts/font = SubResource( 42 )
text = "3"
align = 1
valign = 1

[node name="CooldownUivo" type="Control" parent="CanvasLayer/InformaçõesVisuais"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Fundo" type="Sprite" parent="CanvasLayer/InformaçõesVisuais/CooldownUivo"]
modulate = Color( 0.160784, 0.215686, 0.541176, 1 )
position = Vector2( 850.4, 548.4 )
scale = Vector2( 0.075, 0.075 )
texture = ExtResource( 26 )

[node name="Label" type="Label" parent="CanvasLayer/InformaçõesVisuais/CooldownUivo"]
margin_left = 820.4
margin_top = 528.4
margin_right = 880.4
margin_bottom = 570.4
custom_fonts/font = SubResource( 42 )
text = "3"
align = 1
valign = 1

[node name="CooldownDash" type="Control" parent="CanvasLayer/InformaçõesVisuais"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Fundo" type="Sprite" parent="CanvasLayer/InformaçõesVisuais/CooldownDash"]
modulate = Color( 0.160784, 0.215686, 0.541176, 1 )
position = Vector2( 63.4, 462.4 )
scale = Vector2( 0.075, 0.075 )
texture = ExtResource( 26 )

[node name="Label" type="Label" parent="CanvasLayer/InformaçõesVisuais/CooldownDash"]
margin_left = 33.4
margin_top = 442.4
margin_right = 93.4
margin_bottom = 484.4
custom_fonts/font = SubResource( 42 )
text = "3"
align = 1
valign = 1

[node name="ContagemPulos" type="Control" parent="CanvasLayer/InformaçõesVisuais"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Fundo" type="Sprite" parent="CanvasLayer/InformaçõesVisuais/ContagemPulos"]
modulate = Color( 1, 1, 1, 0.392157 )
position = Vector2( 236, 555.6 )
scale = Vector2( 0.04, 0.04 )
texture = ExtResource( 26 )

[node name="Label" type="Label" parent="CanvasLayer/InformaçõesVisuais/ContagemPulos"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 223.0
margin_top = 541.0
margin_right = 248.0
margin_bottom = 569.0
custom_fonts/font = SubResource( 43 )
text = "2"
align = 1
valign = 1

[connection signal="body_entered" from="Player/Mordida" to="Player" method="_on_ZonaDeAtaque_body_entered"]
[connection signal="body_exited" from="Player/Mordida" to="Player" method="_on_ZonaDeAtaque_body_exited"]
[connection signal="body_entered" from="Player/Uivo" to="Player" method="_on_Uivo_body_entered"]
[connection signal="body_exited" from="Player/Uivo" to="Player" method="_on_Uivo_body_exited"]
[connection signal="timeout" from="Player/UivoCooldown" to="CanvasLayer/InformaçõesVisuais" method="_on_UivoCooldown_timeout"]
[connection signal="timeout" from="Player/BolaFogoCooldown" to="CanvasLayer/InformaçõesVisuais" method="_on_BolaFogoCooldown_timeout"]
[connection signal="timeout" from="Player/DashCooldown" to="CanvasLayer/InformaçõesVisuais" method="_on_DashCooldown_timeout"]
